Correction de la version mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,7 @@
   }
 
   .black-section {
-    @apply bg-primary text-secondary relative px-8 md:px-12 lg:px-20 2xl:px-32;
+    @apply bg-primary text-secondary relative pt-8 md:pt-12 lg:pt-16 xl:pt-20 2xl:pt-24 pb-12 px-8 md:px-12 lg:px-20 2xl:px-32;
   }
 
   .text-content {
